# nshm-model-graphql-api

./: .bumpversion.cfg  .gitignore  .safety-project.ini  .yarnrc.yml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md  SQLITE_CUSTOM_LAMBDA_BUILD.md  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  schema.legacy.graphql  serverless.yml  setup.cfg
.claude/skills/python-upgrade/: SKILL.md
.github/workflows/: deploy-to-aws.yaml  dev.yml  release.yml  run-tests.yml
docs/: MIGRATION_LOG.md  PHASE5_CUTOVER.md
nshm/: admin.py  apps.py  documents.py  models.py  schema.py
nshm/management/commands/: search_index.py
nshm/migrations/: 0001_initial.py  0002_seismichazardmodel_source_logic_tree_and_more.py  0003_sourcelogictreecomponent_and_more.py  0004_sourcelogictreecomponent_tectonic_region.py  0005_alter_sourcelogictreeweightedcomponent_source_logic_tree_and_more.py  0006_alter_seismichazardmodel_source_logic_tree.py  0007_sourcelogictreecomponent_group.py  0008_alter_seismichazardmodel_notes_and_more.py  0009_gmcm_logictree_seismichazardmodel_gmcm_logic_tree.py  0010_rename_gmcm_logictree_gmcmlogictree.py  0011_locationlist_hazardsolution.py  0012_openquakehazardtask.py  0013_delete_openquakehazardtask.py  0014_hazardsolution_typename.py  0015_seismichazardmodel_typename.py  0016_remove_seismichazardmodel_typename.py  0017_rename_sourcelogictreeweightedcomponent_sourcelogictreebranch_and_more.py
nshm_model_graphql_api/: __init__.py  app.py  data.py  nshm_model_graphql_api.py  schema.py  strawberry_schema.py
nshm_model_graphql_api/schema/: __init__.py  nshm_model_gmms_schema.py  nshm_model_schema.py  nshm_model_sources_schema.py  schema_root.py
nshm_model_graphql_api/tools/: dump_legacy_sdl.py  schema_parity.py
nzshm_model_graphql_api/: __init__.py  schema.py  settings.py  urls.py  wsgi.py
nzshm_model_graphql_api/tests/: test_schema_root.py  test_url_configuration.py
pipeline/: admin.py  models.py  schema.py  tests.py
pipeline/fixtures/: oht.json
pipeline/migrations/: 0001_initial.py
scripts/: aws_open_search.py  nshm_openquake_hazard_task.py
tests/: conftest.py  test_corpus_replay.py  test_nzshm_model_import.py  test_schema_gmm_models_as_relay_node.py  test_schema_info.py  test_schema_model_gmm_logic_tree.py  test_schema_model_source_logic_tree.py  test_schema_models.py  test_schema_models_as_relay_node.py  test_schema_parity.py  test_schema_source_models_as_relay_node.py  test_strawberry_http.py
tests/fixtures/corpus/: README.md  seed__get_models.graphql  seed__model_gmm_logic_tree.graphql  seed__model_source_logic_tree.graphql  seed__node_relay_lookup.graphql  seed__root_info.graphql  smoke__about.graphql  weka__logic_tree_page.graphql
tests/smoke/: drive_live.py  replay_corpus.py
