[tool.poetry]
name = "nzshm-model-graphql-api"
version = "0.3.0"
description = ""
authors = ["NSHM <nshm@gns.cri.nz>", "Chris Chamberlain <chrisbc@artisan.co.nz>"]
license = "AGPL3"
readme = "README.md"
packages = [{include = "nshm_model_graphql_api"}]

[tool.poetry.dependencies]
python = "^3.10"
nzshm-model = "0.10.6"
flask = "^3.0.3"
flask-cors = "^4.0.1"
pyyaml = "^6.0.1"
graphql-server = {extras = ["flask"], version = "^3.0.0"}
graphene = "^3.3"
# nzshm-model = "^0.9.3"

[tool.poetry.group.dev.dependencies]
tox = "^4.2.8"
black  = { version = "^24.3.0"}
isort  = { version = "^5.8.0"}
flake8  = { version = "^3.9.2"}
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest = "^7.4.0"
pytest-cov  = { version = "^2.12.0"}
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "^23.2.1", optional = true}
bump2version = {version = "^1.0.1"}
mypy = "^1.5.1"
types-pyyaml = "^6.0.12.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
