[project]
name = "nshm-model-graphql-api"
version = "0.4.0"
description = "A graphql API for nzshm-model library."
authors = [
    {name = "Chris B Chamberlain",email = "chrisbc@artisan.co.nz"},
    {name="NSHM Compute Working Group", email="nshm@gns.cri.nz"}
]
readme = "README.md"
requires-python = "^3.12"
license = "AGPL-3.0-or-later"
packages = [{include = "nshm_model_graphql_api"}]

dependencies = [
    "boto3 (>=1.24.57)",
    "flask (>=3.0.3)",
    "flask-cors (>=6.0)",
    "graphene (>=3.3)",
    "graphql-server (==3.0.0b7)",
    "python-dateutil (>=2.8.2)",
    "pyyaml (>=6.0.1)",
    "nzshm-model (>=0.14.0)",
]

[tool.poetry.group.dev]
optional = true

[dependency-groups]
dev = [
    "black",
    "bump2version",
    "flake8-docstrings",
    "flake8",
    "isort",
    "moto (>=5.1)",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "safety",
    "sgqlc",
    "tox",
    "types-python-dateutil",
    "types-pyyaml"
]

[build-system]
requires = ["poetry-core>=2.2,<3.0"]
build-backend = "poetry.core.masonry.api"
