[project]
name = "nshm-model-graphql-api"
version = "0.4.2"
description = "A graphql API for nzshm-model library."
authors = [
    {name = "Chris B Chamberlain", email = "chrisbc@artisan.co.nz"},
    {name = "NSHM Compute Working Group", email = "nshm@gns.cri.nz"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = {text = "AGPL-3.0-or-later"}

dependencies = [
    "boto3>=1.24.57",
    # --- Strawberry/FastAPI/Mangum stack (migration target) ---
    "strawberry-graphql>=0.243",
    "fastapi>=0.115",
    "mangum>=0.18",
    "pydantic>=2.0",
    # --- legacy Graphene/Flask stack (removed at cutover, Phase 5) ---
    "flask>=3.0.3",
    "flask-cors>=6.0",
    "graphene>=3.3",
    "graphql-server==3.0.0b7",
    # --- data layer / shared ---
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.1",
    "nzshm-model>=0.14.0",
]

[dependency-groups]
dev = [
    "bump2version",
    "httpx>=0.27",
    "moto>=5.1",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "ruff",
    "safety",
    "sgqlc",
    "tox",
    "tox-uv",
    "types-python-dateutil",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nshm_model_graphql_api"]

[tool.uv]
exclude-newer = "1 week"
# nzshm-model ships fresh — always resolve to latest.
exclude-newer-package = { "nzshm-model" = false }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nshm.migrations.*"
ignore_errors = true
